Chose a new font: manrope

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'manrope';
+    src: url('/fonts/manrope.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
