--- a/src/app.pcss
+++ b/src/app.pcss
@@ -4,8 +4,8 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'manrope';
-    src: url('/fonts/manrope.ttf') format('truetype');
+    font-family: 'Inter';
+    src: url('/inter.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
