--- a/src/app.pcss
+++ b/src/app.pcss
@@ -12,6 +12,6 @@
 
 @layer components {
   .editor-prose {
-    @apply prose-sm dark:prose-invert sm:prose-base focus:outline-none prose-p:my-4 prose-a:text-primary-500 prose-ul:list-disc prose-li:my-0;
+    @apply prose-sm dark:prose-invert sm:prose-base focus:outline-none prose-p:my-4 prose-a:text-primary-500 prose-pre:bg-gray-700 prose-ul:list-disc prose-li:my-0;
   }
 }
