--- a/src/app.pcss
+++ b/src/app.pcss
@@ -13,9 +13,11 @@
 @layer components {
   .editor-prose {
     @apply prose-sm
-      dark:prose-invert
       sm:prose-base
+      dark:prose-invert
       focus:outline-none
+      prose-h1:my-0
+      prose-h2:my-0
       prose-p:my-1
       prose-a:text-primary-500
       prose-pre:bg-gray-700
